--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,7 +123,7 @@ a {
     min-width: 264px;
     max-width: 264px;
     min-height: 100vh;
-    max-height: 100vh;
+    max-height: 100%;
     transition: all 0.35s ease-in-out;
     background-color: var(--bs-blue);
     flex-direction: column;
